--- a/login.html
+++ b/login.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./static/css/bootstrap.css">
+    <link rel="stylesheet" href="./static/css/login.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-5">
+                <div class="card p-4">
+                    <img src="./static/img/PREVIMED_Full_Color.png" alt="Logo" class="logo" width="180">
+                    <h4 class="text-center mb-4">Iniciar sesión</h4>
+                    <form>
+                        <div class="mb-3 text-center">
+                            <label for="email" class="form-label">Correo Electrónico</label>
+                            <input type="email" id="email" class="form-control text-center" placeholder="example@mail.com" required>
+                        </div>
+                        <div class="mb-3 text-center">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" id="password" class="form-control text-center" placeholder="*****" required>
+                        </div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-primary">Ingresar</button>
+                        </div>
+                    </form>
+                    <p class="text-center mt-3">
+                        <a href="#" class="text-decoration-none" style="color: #005DA9;">¿Olvidaste tu contraseña?</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
