--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Sena-Front/static/css/bootstrap.css" />
-    <link rel="stylesheet" href="Sena-Front/static/css/index.css" />
+    <link rel="stylesheet" href="static/css/index.css" />
     <link rel="icon" href="Sena-Front/static/img/IconPrevimed.jpg" />
     <title>Previmed</title>
   </head>
