splahs html y css

--- a/Splash.html
+++ b/Splash.html
@@ -6,15 +6,15 @@
     <title>Splah</title>
     <link rel="stylesheet" href="./static/css/StyleSplah.css">
 </head>
-<body>
-  <div class="logo">
-    <img
+<body class="body">
+  <div class="contenedor">
+    <img src="static/img/PREVIMED_Full_Color.png" alt="logo" class="logo">
+    <div class="loading">
+      <svg width="600px" height="200px">
+          <polyline points="1.099 59.885, 98 59.885, 152.901 120, 301 0, 350 60, 448 60" id="back"></polyline>
+        <polyline points="1.099 59.885, 98 59.885, 152.901 120, 301 0, 350 60, 448 60" id="front"></polyline>
+      </svg>
+    </div>
   </div>
-<div class="loading">
-  <svg width="64px" height="48px">
-      <polyline points="0.157 23.954, 14 23.954, 21.843 48, 43 0, 50 24, 64 24" id="back"></polyline>
-    <polyline points="0.157 23.954, 14 23.954, 21.843 48, 43 0, 50 24, 64 24" id="front"></polyline>
-  </svg>
-</div>
 </body>
 </html>
