--- a/citamedica.html
+++ b/citamedica.html
@@ -1,44 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./static/css/bootstrap.css" />
-    <link rel="stylesheet" href="./static/css/citamedica.css">
-    <link rel="icon" href="Sena-Front/static/img/IconPrevimed.jpg" />
+    <link rel="stylesheet" href="./static/css/index.css" />
+    <link rel="icon" href="static/img/IconPrevimed.jpg" />
     <title>Previmed</title>
   </head>
-  <body>
-    <header class="custom-header d-flex align-items-center">
-      <img src="Sena-Front/static/img/PREVIMED_Full_Color.png" alt="Logo" />
-      <button class="btn btn-white bg-white">
-        <a href="Sena-Front/login.html">Ingresar</a>
-      </button>
+  <body class="m-0">
+
+    <!-- Encabezado -->
+    <header class="container-fluid row align-items-center py-2 m-0" style="background-color: #2273CC;">
+      <div class="col-2">
+        <img class="img-fluid" src="static/img/PREVIMED_Full_Color.png" alt="Logo" />
+      </div>
+      <div class="col text-end">
+        <a href="login.html" class="btn" style="background-color: #ffffff; color: #2273CC; border-color: #ffffff;">
+          Ingresar
+        </a>
+      </div>
     </header>
 
-    <div class="sidebar">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="Sena-Front/index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Planes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Zonas de cobertura</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Consulta de contrato</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Visita médica</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="content">
-        
+    <!-- Contenedor principal -->
+    <div class="row m-0">
+      <!-- Sidebar -->
+      <div class="col-12 col-sm-4 col-md-3 col-lg-2 vh-100" style="background-color: #2273CC;">
+        <div class="sidebar p-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active text-white" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white-50" href="#">Planes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white-50" href="#">Zonas de cobertura</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white-50" href="#">Consulta de contrato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white-50" href="#">Visita médica</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- Contenido principal -->
+      <div class="col-12 col-sm-8 col-md-9 col-lg-10">
         <h1>Agregar una nueva cita medica</h1>
         <p>Llena los siguiente campos con la información del paciente. Recuerda que los campos con * son obligatorios.</p>
         <div>
@@ -71,8 +80,8 @@
 
 </div>
     </div>
-    </div>
+      </div>
+    </div>    
+
   </body>
 </html>
-
-    
