--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!-- Encabezado -->
     <header class="container-fluid row align-items-center py-2 m-0" style="background-color: #2273CC;">
       <div class="col-2">
-        <img class="img-fluid" src="static/img/PREVIMED_Full_Color.png" alt="Logo" />
+        <img class="img-fluid max" src="static/img/PREVIMED_Full_Color.png" alt="Logo" />
       </div>
       <div class="col text-end">
-        <a href="login.html" class="btn" style="background-color: #ffffff; color: #2273CC; border-color: #ffffff;">
+        <a href="login.html" class="btn btn-light text-primary" >
           Ingresar
         </a>
       </div>
@@ -25,32 +25,39 @@
     <!-- Contenedor principal -->
     <div class="row m-0">
       <!-- Sidebar -->
-      <div class="col-12 col-sm-4 col-md-3 col-lg-2 vh-100" style="background-color: #2273CC;">
-        <div class="sidebar p-3">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active text-white" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#">Planes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#">Zonas de cobertura</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#">Consulta de contrato</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white-50" href="#">Visita médica</a>
-            </li>
-          </ul>
-        </div>
+      <div class="col-0 col-sm-3 col-md-3 col-lg-2 text-white sidebar p-3" style="background-color: #2273CC;">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active text-white" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white-50" href="#">Planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white-50" href="#">Zonas de cobertura</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white-50" href="#">Consulta de contrato</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white-50" href="#">Visita médica</a>
+          </li>
+        </ul>
       </div>
+
       <!-- Contenido principal -->
-      <div class="col-12 col-sm-8 col-md-9 col-lg-10">
-        contenido
+      <div class="col-12 col-sm-9 col-md-9 col-lg-10 content">
+        <img src="static/img/inicio/inicio.png" class="img-fluid">
+        <a href="https://web.whatsapp.com/" class="fixed-top container-fluid"><img src="static/img/inicio/WhatsApp_icon.png.webp" class="float-end" style="max-width: 70px; margin-top: 150px;"></a>
+        <img src="static/img/inicio/inicio2.png" class="img-fluid">
+        <img src="static/img/inicio/inicio3.png" class="img-fluid">
+        <img src="static/img/inicio/inicio4.png" class="img-fluid">
       </div>
-    </div>    
+    </div>
+
+    <footer>
+      <img src="static/img/inicio/footer.png" class="img-fluid">
+    </footer>    
 
   </body>
 </html>
